--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
-I took my blogs in Evernote, please find the links to the published notes below 
-(if it only shows a handful blogs please refresh the page or try another browser such as Safari)
-我的博客存放在印象笔记里，以下链接为相关的公开笔记本（博客），如果无法正常显示（只出现十几二十个文章），请刷新或者使用另外一个浏览器（比如Safari）
-https://www.evernote.com/pub/shengwang6/web
-https://www.evernote.com/pub/shengwang6/webgl
-https://www.evernote.com/pub/shengwang6/canvas
-https://www.evernote.com/pub/shengwang6/angularjs1.x
-https://www.evernote.com/pub/shengwang6/java
-https://www.evernote.com/pub/shengwang6/git
-https://www.evernote.com/pub/shengwang6/mysql
-https://www.evernote.com/pub/shengwang6/spring
-https://www.evernote.com/pub/shengwang6/scala
-https://www.evernote.com/pub/shengwang6/interviewquestionsandanswers
-https://www.evernote.com/pub/shengwang6/shan_zhai_you_xi
+I took my blogs in Evernote, please find the links to the published notes below <br/>
+(if it only shows a handful blogs please refresh the page or try another browser such as Safari)<br/>
+我的博客存放在印象笔记里，以下链接为相关的公开笔记本（博客），如果无法正常显示（只出现十几二十个文章），请刷新或者使用另外一个浏览器（比如Safari）<br/>
+<ul>
+  <li>https://www.evernote.com/pub/shengwang6/javascriptnote</li>
+  <li>https://www.evernote.com/pub/shengwang6/webgl</li>
+  <li>https://www.evernote.com/pub/shengwang6/canvas</li>
+  <li>https://www.evernote.com/pub/shengwang6/angularjs1.x</li>
+  <li>https://www.evernote.com/pub/shengwang6/java</li>
+  <li>https://www.evernote.com/pub/shengwang6/git</li>
+  <li>https://www.evernote.com/pub/shengwang6/mysql</li>  
+  <li>https://www.evernote.com/pub/shengwang6/spring</li>
+  <li>https://www.evernote.com/pub/shengwang6/scala</li>
+  <li>https://www.evernote.com/pub/shengwang6/interviewquestionsandanswers</li>
+  <li>https://www.evernote.com/pub/shengwang6/shan_zhai_you_xi</li>  
+</ul>
+
+
+
+
+
+
+
+
+
+
+
 
