--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@ I took my blogs in Evernote, please find the links to the published notes below 
   <li>https://www.evernote.com/pub/shengwang6/interviewquestionsandanswers</li>
   <li>https://www.evernote.com/pub/shengwang6/shan_zhai_you_xi</li>  
 </ul>
-<a href="Chart.html">Chart Demo</a>
+<a href="WSChart/Chart.html">Chart Demo</a>
