--- a/WSMenuSys/menu.html
+++ b/WSMenuSys/menu.html
@@ -152,7 +152,7 @@
 <div style="text-align: center">
     目录结构是root，容器是id为"container"的div。调用`new MenuSystem("container", root)即可创建目录。
 </div>
-<div style="text-align: center">
+<div style="text-align: center; color: red;">
     点击下层的按钮可以前进到次级目录。点击上层的任意按钮可以回退到任意一个上级目录。
 </div>
 <div style="text-align: center">
