--- a/WSMemoGame/GameBoard.html
+++ b/WSMemoGame/GameBoard.html
@@ -156,7 +156,7 @@
     <div>
         <ul>
             <li>键盘按下 S 开始游戏</li>
-            <li>使用键盘 上下左右 选择牌，回车 翻盘，连续翻到两张颜色一样的牌则可以消除</li>
+            <li>使用键盘 上下左右 选择牌，回车 翻牌，连续翻到两张颜色一样的牌则可以消除</li>
             <li style="color: red;">本演示重点： 按下 C 进入作弊模式，可以使用鼠标看牌。再次按 C 退出作弊模式</li>
             <li>不使用任何类库。536行代码（包括注释）。</li>
         </ul>
