--- a/index.html
+++ b/index.html
@@ -1,17 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <style>
+    body {
+      background: url(footer_lodyas.png);
+      color: white;
+    }
+
+    a {
+      color: wheat;
+    }
+
+    a:visited {
+      color: wheat;
+    }
+  </style>
+</head>
+<body>
+Some of my after work demo projects.
+下面是我业余空闲时做的一些小的展示项目（有一些年代很久远了）
+<ul>
+  <li><a href="WSChart/Chart.html">WS Chart 一个2D ＋ 3D的网页图表类库</a></li>
+  <li><a href="WSNote/note.html">WS Chart 一个方便程序员做笔记的网页应用</a></li>
+  <li><a href="WSModelViewer/p.html">WS Model Viewer 一个在网页里预览3D模型的纯H5应用</a></li>
+  <li><a href="WSMemoGame/GameBoard.html">WS Memo Game 一个为小学生做的网页小游戏</a></li>
+  <li><a href="WSMenuSys/menu.html">WS Menu System 一个菜单目录小类库</a></li>
+</ul>
 I took my blogs in Evernote, please find the links to the published notes below <br/>
 (if it only shows a handful blogs please refresh the page or try another browser such as Safari)<br/>
 我的博客存放在印象笔记里，以下链接为相关的公开笔记本（博客），如果无法正常显示（只出现十几二十个文章），请刷新或者使用另外一个浏览器（比如Safari）<br/>
 <ul>
-  <li>https://www.evernote.com/pub/shengwang6/javascriptnote</li>
-  <li>https://www.evernote.com/pub/shengwang6/webgl</li>
-  <li>https://www.evernote.com/pub/shengwang6/canvas</li>
-  <li>https://www.evernote.com/pub/shengwang6/angularjs1.x</li>
-  <li>https://www.evernote.com/pub/shengwang6/java</li>
-  <li>https://www.evernote.com/pub/shengwang6/git</li>
-  <li>https://www.evernote.com/pub/shengwang6/mysql</li>  
-  <li>https://www.evernote.com/pub/shengwang6/spring</li>
-  <li>https://www.evernote.com/pub/shengwang6/scala</li>
-  <li>https://www.evernote.com/pub/shengwang6/interviewquestionsandanswers</li>
-  <li>https://www.evernote.com/pub/shengwang6/shan_zhai_you_xi</li>  
+  <li><a href="https://www.evernote.com/pub/shengwang6/javascriptnote">JavaScript</a></li>
+  <li><a href="https://www.evernote.com/pub/shengwang6/webgl">WebGL</a></li>
+  <li><a href="https://www.evernote.com/pub/shengwang6/canvas">Canvas</a></li>
+  <li><a href="https://www.evernote.com/pub/shengwang6/angularjs1.x">Angular1.x</a></li>
+  <li><a href="https://www.evernote.com/pub/shengwang6/java">Java</a></li>
+  <li><a href="https://www.evernote.com/pub/shengwang6/git">Git</a></li>
+  <li><a href="https://www.evernote.com/pub/shengwang6/mysql">MySQL</a></li>
+  <li><a href="https://www.evernote.com/pub/shengwang6/spring">Spring</a></li>
+  <li><a href="https://www.evernote.com/pub/shengwang6/scala">Scala</a></li>
+  <li><a href="https://www.evernote.com/pub/shengwang6/shan_zhai_you_xi">Game</a></li>
 </ul>
-<a href="WSChart/Chart.html">Chart Demo</a>
+</body>
+</html>
+
+
+
+
+
+
+
+
