--- a/WSChart/Chart.html
+++ b/WSChart/Chart.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link type="text/css" rel="stylesheet" href="dist/my-chart.css"/>
+    <link type="text/css" rel="stylesheet" href="src/CSS/my-chart.css"/>
     <style>
         body {
             background-color: lightgrey;
@@ -19,6 +19,17 @@
         body > .code-block {
             width: 900px;
             margin: auto;
+        }
+
+        .demo-tip {
+            margin: 20px auto;
+            width: 900px;
+            padding: 20px;
+            box-sizing: border-box;
+            border-radius: 5px;
+            background: lightpink;
+            color: white;
+            font-weight: bold;
         }
     </style>
 
@@ -139,6 +150,9 @@
 </head>
 <body>
 <div id="container9" style="width:900px; height:700px;"></div>
+<div class="demo-tip">
+    You can drag to rotate the chart, or click on one of the columns to highlight it.
+</div>
 <pre class="code-block">
     <code class="js code-block">
     let input = {
